Adicionando outras funções da imovel
